Fixed button UX visibility for save buttons

--- a/www/sass/app.scss
+++ b/www/sass/app.scss
@@ -128,7 +128,9 @@ div#haahwaaw {
 
 	}
 
-	.confirm.hidden, .prompt.hidden, .pictureframe.hidden, .options.hidden {
+	.confirm.hidden, .prompt.hidden, 
+	.pictureframe.hidden, .options.hidden,
+	.picturecancel.hidden {
 		display: none;
 	}
 
